# SingNeko

./: .gitignore  README.md  meson.build
.forgejo/workflows/: build-alpine.yaml  build-flatpak.yml
.github/workflows/: build-flatpak.yml
data/: io.gitlab.nekocwd.singneko.desktop.in  io.gitlab.nekocwd.singneko.gschema.xml  io.gitlab.nekocwd.singneko.metainfo.xml.in  io.gitlab.nekocwd.singneko.service.in  io.gitlab.nekocwd.singularity.desktop.in  io.gitlab.nekocwd.singularity.gschema.xml  io.gitlab.nekocwd.singularity.metainfo.xml.in  io.gitlab.nekocwd.singularity.service.in  link.nekocwd.singneko.desktop.in  link.nekocwd.singneko.gschema.xml  link.nekocwd.singneko.metainfo.xml.in  link.nekocwd.singneko.service.in  meson.build
data/icons/: meson.build
package/alpine/: APKBUILD
package/flatpak/: go.mod.yml  link.nekocwd.singneko.yml  modules.txt  nightly.flatpakrepo  stable.flatpakrepo
po/: POTFILES.in  meson.build
src/: application.vala  base.json  main.vala  meson.build  singneko.gresource.xml  singularity.gresource.xml  window.blp  window.ui  window.vala
src/gtk/: help-overlay.blp  outbound-row.blp  outbound-row.vala  style.css  subscription-dialog.blp  subscription-dialog.vala  window.blp  window.vala
src/icons/: icons.gresource.xml  meson.build
src/logic/: config.vala  error.vala  meson.build  settings.vala  singbox.vala  subscription.vala  tls.vala  utils.vala
src/logic/outbounds/: dial.vala  meson.build  outbound.vala  shadowsocks.vala  trojan.vala  vless.vala
src/logic/transports/: grpc.vala  http.vala  http_upgrade.vala  meson.build  quic.vala  transport.vala  ws.vala
